# rust_blackjack

./: .dockerignore  .env.mcp.example  .gitignore  Cargo.toml  Dockerfile  README.md  WORKSPACE.md
.github/agents/: rust-specialist.agent.md
.github/workflows/: ci.yml
api/: Cargo.toml
api/crates/blackjack-cli/: Cargo.toml
crates/blackjack-api/: .env.example  Cargo.toml  config.toml
crates/blackjack-api/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  rate_limiter.rs
crates/blackjack-api/tests/: api_tests.rs
crates/blackjack-core/: Cargo.toml
crates/blackjack-core/src/: lib.rs
crates/blackjack-core/tests/: integration_tests.rs
crates/blackjack-service/: Cargo.toml
crates/blackjack-service/src/: lib.rs
crates/blackjack-service/tests/: service_tests.rs
docs/: DEPLOYMENT.md  PRD.md  QUICK_REFERENCE.md  next-steps.md
docs/postman/: API_TESTING_INDEX.md  Blackjack_API.postman_collection.json  Blackjack_API_Local.postman_environment.json  CURL_EXAMPLES.md  IMPLEMENTATION_STATUS.md  M7_CHANGES.md  POSTMAN_GUIDE.md  QUICK_REFERENCE.md  README.md  api_tests.http  invitation_flow.http  test_api.ps1  test_enrollment_error.ps1
frontend/: .env.development  .env.production  .gitignore  FRONTEND_CONFIG.md  GETTING_STARTED.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  client.ts  games.ts  invitations.ts
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useGame.ts  useWebSocket.ts
src/: main.rs
(+23 files in other folders)
